Add new tes metadata package